# healthgan

./: .gitignore  Dockerfile  Dockerfile.cuda  README.md  compose.yml  pyproject.toml
notebooks/: ecg.ipynb  eda.ipynb  intrusion_metadata.json  sus.ipynb  wustl.ipynb
src/: daphnet_utils.py
