[project]
name = "healthgan"
version = "0.1.0"
description = "A project for generating synthetic diabetes time series data using GANs."
authors = [
  { name="Ezequiel Schneider", email="ezequielschneiderr@gmail.com" }
]
dependencies = [
  "cython",
  "notebook",
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "scikit-learn",
  "seaborn>=0.13.2",
  "xgboost>=3.0.2",
  "lightgbm>=4.6.0",
  "catboost>=1.2.8",
]
